COSMETIC Fix width of textareas so they align with resize grippies.

--- a/css/style_lava.css
+++ b/css/style_lava.css
@@ -756,6 +756,8 @@ div.grippie:hover {
   margin-bottom:0pt;
   width:100% !important; width:95%;
   height: 20%;
+  padding-left:0px;
+  padding-right:0px;
 }
 
 
